<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.switchnumber.SwitchNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sim_card"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/font_8dp"
                    android:fontFamily="sans-serif"
                    android:text="Old Number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_16sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/font_20dp"
                android:src="@drawable/ic_pointing_right"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sim_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/font_8dp"
                    android:fontFamily="sans-serif"
                    android:text="New Number"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/font_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_28dp"
                android:fontFamily="sans-serif"
                android:text="@string/msg1"
                android:textColor="@color/grey_90"
                android:textSize="@dimen/font_16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_12dp"
                android:fontFamily="sans-serif"
                android:text="@string/msg2"
                android:textColor="@color/grey_90"
                android:textSize="@dimen/font_16sp" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_12dp"
                android:fontFamily="sans-serif"
                android:text=""
                android:textColor="@color/grey_90"

                android:textSize="@dimen/font_16sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_verifyMoblie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="52dp"
            android:layout_marginVertical="@dimen/font_32dp"
            android:background="@drawable/verify_button_dark"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_check_bold_24dp"
                android:drawablePadding="@dimen/font_20dp"
                android:drawableTint="@color/white"
                android:fontFamily="sans-serif-medium"
                android:paddingHorizontal="32dp"
                android:paddingVertical="@dimen/font_12dp"
                android:text="@string/btnverify"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>